{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 18,
  "lineage": "851a049f-0f46-3c78-2016-c0b04c25980d",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:711147525323:internet-gateway/igw-0c3c547547b39641c",
            "id": "igw-0c3c547547b39641c",
            "owner_id": "711147525323",
            "tags": {
              "project": "CNE_Practical"
            },
            "vpc_id": "vpc-0f1502a0d97e0d04f"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0402875d54985dcfd",
            "owner_id": "711147525323",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3c547547b39641c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "CNE_Practical"
            },
            "vpc_id": "vpc-0f1502a0d97e0d04f"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subA_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd0f01c3b07aea6f",
            "route_table_id": "rtb-0402875d54985dcfd",
            "subnet_id": "subnet-09a2b1d663f4bf784"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicA",
            "module.aws_vpc.aws_vpc.vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subB_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e89ad7e648716cf2",
            "route_table_id": "rtb-0402875d54985dcfd",
            "subnet_id": "subnet-042ca88fb929254da"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicB",
            "module.aws_vpc.aws_vpc.vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:711147525323:subnet/subnet-09a2b1d663f4bf784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09a2b1d663f4bf784",
            "map_public_ip_on_launch": true,
            "owner_id": "711147525323",
            "tags": {
              "project": "CNE_Practical"
            },
            "vpc_id": "vpc-0f1502a0d97e0d04f"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:711147525323:subnet/subnet-042ca88fb929254da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-042ca88fb929254da",
            "map_public_ip_on_launch": true,
            "owner_id": "711147525323",
            "tags": {
              "project": "CNE_Practical"
            },
            "vpc_id": "vpc-0f1502a0d97e0d04f"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:711147525323:vpc/vpc-0f1502a0d97e0d04f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0371a0b5e44566e24",
            "default_route_table_id": "rtb-0870d3c3c44581621",
            "default_security_group_id": "sg-05b1bf1e20c0b37e6",
            "dhcp_options_id": "dopt-42d0eb24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f1502a0d97e0d04f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0870d3c3c44581621",
            "owner_id": "711147525323",
            "tags": {
              "project": "CNE_Practical"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b85dae948397feb4",
            "arn": "arn:aws:ec2:eu-west-1:711147525323:instance/i-05663682b70df6be6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05663682b70df6be6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0449caf0a1df60173",
            "private_dns": "ip-10-0-1-7.eu-west-1.compute.internal",
            "private_ip": "10.0.1.7",
            "public_ip": "18.202.57.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02a5913522ce3aabe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a2b1d663f4bf784",
            "tags": {
              "Name": "jenkins_VM",
              "project": "CNE_Practical"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040c62ff6bb1710ca"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.publicA",
            "module.ec2_instances.aws_key_pair.demo_key",
            "module.security_group.aws_security_group.wsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b85dae948397feb4",
            "arn": "arn:aws:ec2:eu-west-1:711147525323:instance/i-00cc02af5e1f9c9af",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cc02af5e1f9c9af",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0580e8472140c8f38",
            "private_dns": "ip-10-0-1-170.eu-west-1.compute.internal",
            "private_ip": "10.0.1.170",
            "public_ip": "3.251.92.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02b025da5d7264d94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a2b1d663f4bf784",
            "tags": {
              "Name": "test_VM",
              "project": "CNE_Practical"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040c62ff6bb1710ca"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.publicA",
            "module.ec2_instances.aws_key_pair.demo_key",
            "module.security_group.aws_security_group.wsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:711147525323:security-group/sg-040c62ff6bb1710ca",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040c62ff6bb1710ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "3.251.78.238/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSG",
            "name_prefix": "",
            "owner_id": "711147525323",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "CNE_Practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1502a0d97e0d04f"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}